Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14972

qmlviewer doesn't cleanup properly when quitting via File->quit

    XMLWordPrintable

Details

    • 8ef0e62055a2c98637e0b7423feda3ebca7983f4, 96801c909a0d63a584e45c08277372c2b999fcce

    Description

      The destructor for QDeclarativeView is never called when quitting via File->quit. (Closing via the window's "close" button works, however)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes