Cleanup QMLViewer properly when exiting via File->Quit.

Task-number: QTBUG-14972
Change-Id: I9b8738fe0ae94a1bbed7427f137a6ab5c7a8ff86
Reviewed-on: http://codereview.qt.nokia.com/2154
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Charles Yin <charles.yin@nokia.com>