tools/qmlviewer/qmlruntime.cpp
@@ -1404,6 +1404,7 @@ void QDeclarativeViewer::appAboutToQuit()
     loggerWindow = 0;
     delete tester;
     tester = 0;
+    close();
 }
 
 void QDeclarativeViewer::autoStartRecording()
